testing for re directing to the next page

--- a/forwrd.html
+++ b/forwrd.html
@@ -15,8 +15,7 @@ body {
  <h1><strong>Hospital Management System</strong><h1>
    <hr><br><br><br>
  <h3>Administrator Login :</h3>
- <a href="forward.html">Click here to proceed.</a>
-
+<p>Thank god you are here how would i have even tested this project without github</p>
  </body>
 </head>
 </html>
