adding index file

--- a/index.html
+++ b/index.html
@@ -1,22 +1,2 @@
-<html>
-<head>
- <style>
-body {
-    background-color: LightSteelBlue;
-   background-image: url("hmsproject.jpg");
-  background-size: 100% ,100%;
-    background-repeat: no-repeat;
-    background-position: left top;
-    background-attachment: fixed;
-}
-
- </style>
- <body>
- <h1><strong>Hospital Management System</strong><h1>
-   <hr><br><br><br>
- <h3>Administrator Login :</h3>
- <a href="forward.html">Click here to proceed.</a>
-
- </body>
-</head>
-</html>
+<h1> Suraj Tripathi</h1>
+<h2> Cloud Native Developer </h2>
