--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
-								<h3>Photoshop</h3>
+								<h3>AWS</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="75"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
@@ -313,7 +313,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
-								<h3>jQuery</h3>
+								<h3>React</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="60"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:60%">
@@ -324,7 +324,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
-								<h3>HTML5</h3>
+								<h3>Node.Js</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="85"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
@@ -335,7 +335,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
-								<h3>CSS3</h3>
+								<h3>Docker</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="90"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
@@ -346,7 +346,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
-								<h3>WordPress</h3>
+								<h3>Kubernetes</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="70"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
@@ -357,7 +357,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
-								<h3>SEO</h3>
+								<h3>DevOps</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
@@ -383,24 +383,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							<div class="fancy-collapse-panel">
 								<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 									<div class="panel panel-default">
-									    <div class="panel-heading" role="tab" id="headingOne">
-									        <h4 class="panel-title">
-									            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Master Degree Graphic Design
-									            </a>
-									        </h4>
-									    </div>
-									    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-									         <div class="panel-body">
-									            <div class="row">
-										      		<div class="col-md-6">
-										      			<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-										      		</div>
-										      		<div class="col-md-6">
-										      			<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-										      		</div>
-										      	</div>
-									         </div>
-									    </div>
+									   
 									</div>
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingTwo">
@@ -411,38 +394,11 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 									    </div>
 									    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 									        <div class="panel-body">
-									            <p>Far far away, behind the word <strong>mountains</strong>, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-													<ul>
-														<li>Separated they live in Bookmarksgrove right</li>
-														<li>Separated they live in Bookmarksgrove right</li>
-													</ul>
-									        </div>
-									    </div>
-									</div>
-									<div class="panel panel-default">
-									    <div class="panel-heading" role="tab" id="headingThree">
-									        <h4 class="panel-title">
-									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Diploma in Information Technology
-									            </a>
-									        </h4>
-									    </div>
-									    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-									        <div class="panel-body">
-									            <p>Far far away, behind the word <strong>mountains</strong>, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>	
-									        </div>
-									    </div>
-									</div>
-
-									<div class="panel panel-default">
-									    <div class="panel-heading" role="tab" id="headingFour">
-									        <h4 class="panel-title">
-									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">Diploma in Information Technology
-									            </a>
-									        </h4>
-									    </div>
-									    <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
-									        <div class="panel-body">
-									            <p>Far far away, behind the word <strong>mountains</strong>, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>	
+												<p>
+													JSS ACADEMY OF TECHNICAL EDUCATION, NOIDA
+													Bachelor of Technology - BTech (Hons.), Computer Science and Engineering
+													Jul 2016 - Jul 2020
+													Grade: 88.6%</p>	
 									        </div>
 									    </div>
 									</div>
@@ -456,7 +412,11 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 									    </div>
 									    <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
 									        <div class="panel-body">
-									            <p>Far far away, behind the word <strong>mountains</strong>, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>	
+									            <p>
+													Central Academy Senior Secondary School
+													12th , Physics Chemistry and Maths
+													2014 - 2016
+													Grade: 92%</p>	
 									        </div>
 									    </div>
 									</div>
@@ -486,8 +446,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					               </div>
 
 					               <div class="timeline-label">
-					                  <h2><a href="#">Full Stack Developer</a> <span>2017-2018</span></h2>
-					                  <p>Tolerably earnestly middleton extremely distrusts she boy now not. Add and offered prepare how cordial two promise. Greatly who affixed suppose but enquire compact prepare all put. Added forth chief trees but rooms think may.</p>
+					                  <h2><a href="https://aws.amazon.com/professional-services/">Cloud Consultant - AppDev at AWS Professional Services</a> <span>2021-Present</span></h2>
+					                  <p>Accelerate customer and partner business outcomes through innovative production use of the AWS platform. Providing consultation, guidance, artefacts, and POCs that accelerate customers application migration and modernization projects. Working in all phases of software development starting from requirement analysis, architecture, design, development, testing, implementation and maintenance/support.</p>
 					               </div>
 					            </div>
 					         </article>
@@ -499,8 +459,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">Front End Developer at Google Company</a> <span>2017-2018</span></h2>
-					                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+					               	<h2><a href="https://aws.amazon.com/">Cloud Engineer - DMS at Amazon Web Services</a> <span>2020-2021</span></h2>
+					                  <p>Assisting AWS customers and partner businesses on a wide spectrum of AWS serverless and mobile technologies. Providing technical assistance, service and architecture guidance, POCs, and work-arounds to operate enterprise application or infrastructure in the AWS cloud.</p>
 					               </div>
 					            </div>
 					         </article>
@@ -511,8 +471,13 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">System Analyst</a> <span>2017-2018</span></h2>
-					                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+					               	<h2><a href="https://digital-alpha.com/">Machine Learning Engineer Intern at Digital Alpha</a> <span>2019-2020</span></h2>
+					                  <p>Responsibilities:
+										 Designing and developing machine learning applications
+										 Training and evaluating models
+										 Build, Improve and extend machine learning capabilities.
+										 Research and evaluate new/different approaches to machine learning problems.
+										 Produce deliverable results and take them from development to production in collaboration with the companies engineers.</p>
 					               </div>
 					            </div>
 					         </article>
@@ -523,8 +488,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">Creative Designer</a> <span>2017-2018</span></h2>
-					                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+					               	<h2><a href="https://vidooly.com/">Data Science Intern at Vidooly Media Tech</a> <span>2019-2019</span></h2>
+					                  <p>Worked on NLP and machine learning on various projects which involve keyword extraction, comment classification, and word sense disambiguation to help provide better video recommendation.</p>
 					               </div>
 					            </div>
 					         </article>
@@ -535,8 +500,11 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">UI/UX Designer at Envato</a> <span>2017-2018</span></h2>
-					                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+					               	<h2><a href="#">Data Science Intern at Analyticscosm</a> <span>2019-2019</span></h2>
+					                  <p> Carrying out data analysis using advanced Data Science Softwares.
+										 Finding actionable patterns in the data and present it using visualization
+										techniques.
+										 Create models that can work on any similar data and produce actionable results.</p>
 					               </div>
 					            </div>
 					         </article>
@@ -679,9 +647,9 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							<div class="blog-entry">
 								<a href="blog.html" class="blog-img"><img src="images/blog-1.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
 								<div class="desc">
-									<span><small>April 14, 2018 </small> | <small> Web Design </small> | <small> <i class="icon-bubble3"></i> 4</small></span>
-									<h3><a href="blog.html">Renovating National Gallery</a></h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<span><small>June 3, 2020</small> | <small> </small> | Cloud Native<small> <i class="icon-bubble3"></i> 4</small></span>
+									<h3><a href="https://www.linkedin.com/pulse/microservices-containers-serverless-backbone-suraj-tripathi/"> Microservices, Containers, and Serverless: The Backbone of cloud-native development.</a></h3>
+									<p>Microservices is a software development approach in which an application is a collection of services that are developed, deployed, and tested independently. These services are loosely coupled and communicate with each other using well-defined APIs.</p>
 								</div>
 							</div>
 						</div>
@@ -689,9 +657,9 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							<div class="blog-entry">
 								<a href="blog.html" class="blog-img"><img src="images/blog-2.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
 								<div class="desc">
-									<span><small>April 14, 2018 </small> | <small> Web Design </small> | <small> <i class="icon-bubble3"></i> 4</small></span>
-									<h3><a href="blog.html">Wordpress for a Beginner</a></h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<span><small>June 6, 2020 </small> | <small> DevOps </small> | <small> <i class="icon-bubble3"></i> 4</small></span>
+									<h3><a href="https://www.linkedin.com/pulse/canary-releases-keep-production-safe-suraj-tripathi/">Canary releases keep the production safe</a></h3>
+									<p>Canary releases can help pro-actively correct these bugs and prevent errors from happening in your production environment.</p>
 								</div>
 							</div>
 						</div>
@@ -699,9 +667,9 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							<div class="blog-entry">
 								<a href="blog.html" class="blog-img"><img src="images/blog-3.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
 								<div class="desc">
-									<span><small>April 14, 2018 </small> | <small> Inspiration </small> | <small> <i class="icon-bubble3"></i> 4</small></span>
-									<h3><a href="blog.html">Make website from scratch</a></h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<span><small>June 16, 2020</small> | <small> Cloud Native </small> | <small> <i class="icon-bubble3"></i> 4</small></span>
+									<h3><a href="blog.html">Stateless Microservices Accelerate Change</a></h3>
+									<p>Stateless microservices are one of the most important things to take into consideration when designing a cloud-native solution for stateless microservices that are cheap, easy to develop, and highly scalable.</p>
 								</div>
 							</div>
 						</div>
@@ -729,7 +697,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 									<i class="icon-globe-outline"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="#">info@domain.com</a></p>
+									<p><a href="#">acc.surajtripathi@gmail.com</a></p>
 								</div>
 							</div>
 
@@ -738,7 +706,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 									<i class="icon-map"></i>
 								</div>
 								<div class="colorlib-text">
-									<p>198 West 21th Street, Suite 721 New York NY 10016</p>
+									<p>10A/58, AVC, Yojna -3 Jhunsi, Prayagraj</p>
 								</div>
 							</div>
 
@@ -747,7 +715,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 									<i class="icon-phone"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="tel://">+123 456 7890</a></p>
+									<p><a href="tel://">+91 9559141679</a></p>
 								</div>
 							</div>
 						</div>
