--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 								<a href="blog.html" class="blog-img"><img src="images/blog-3.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
 								<div class="desc">
 									<span><small>June 16, 2020</small> | <small> Cloud Native </small> | <small> <i class="icon-bubble3"></i> 4</small></span>
-									<h3><a href="blog.html">Stateless Microservices Accelerate Change</a></h3>
+									<h3><a href="https://www.linkedin.com/pulse/stateless-microservices-accelerate-change-suraj-tripathi/">Stateless Microservices Accelerate Change</a></h3>
 									<p>Stateless microservices are one of the most important things to take into consideration when designing a cloud-native solution for stateless microservices that are cheap, easy to develop, and highly scalable.</p>
 								</div>
 							</div>
