blog and skills update

--- a/index.html
+++ b/index.html
@@ -138,7 +138,6 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 										<span class="heading-meta">About Us</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
 										<p><strong>Hi I'm Suraj Tripathi</strong> I am a continuous learner and someone who can connect the theory and its intuition. I have an obsession with coding and solving problems. I have working experience in all phases of software development starting from requirement analysis, architecture, design, development, testing, implementation, security hardening, defence in depth, and maintenance/support. I have been involved in building architecture for serverless and micro-services applications with great level of experience and exposure to the modern software tools and technologies.</p>
-										<p>I am a experienced professional with 2.5 years of performance, excellence and key contributions at AWS with demonstrated history of working in a customer facing role on a broad spectrum of AWS serverless and mobile technologies. I have worked on multiple customer and partner businesses projects related to application migration and modernization using native AWS services.</p>
 									</div>
 								</div>
 							</div>
@@ -298,7 +297,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					</div>
 					<div class="row">
 						<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-							<p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
+							<p><p>I am a experienced professional with 2.5 years of performance, excellence and key contributions at AWS with demonstrated history of working in a customer facing role on a broad spectrum of AWS serverless and mobile technologies. I have worked on multiple customer and partner businesses projects related to application migration and modernization using native AWS services.</p>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
@@ -644,7 +643,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					<div class="row">
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="blog.html" class="blog-img"><img src="images/blog-1.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<a href="blog.html" class="blog-img"><img src="images/mcs.jpeg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
 								<div class="desc">
 									<span><small>June 3, 2020</small> | <small> </small> | Cloud Native<small> <i class="icon-bubble3"></i> 4</small></span>
 									<h3><a href="https://www.linkedin.com/pulse/microservices-containers-serverless-backbone-suraj-tripathi/"> Microservices, Containers, and Serverless: The Backbone of cloud-native development.</a></h3>
@@ -654,7 +653,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 						</div>
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="blog-entry">
-								<a href="blog.html" class="blog-img"><img src="images/blog-2.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<a href="blog.html" class="blog-img"><img src="images/canary.jpeg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
 								<div class="desc">
 									<span><small>June 6, 2020 </small> | <small> DevOps </small> | <small> <i class="icon-bubble3"></i> 4</small></span>
 									<h3><a href="https://www.linkedin.com/pulse/canary-releases-keep-production-safe-suraj-tripathi/">Canary releases keep the production safe</a></h3>
@@ -664,7 +663,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 						</div>
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="blog.html" class="blog-img"><img src="images/blog-3.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<a href="blog.html" class="blog-img"><img src="images/stateless.jpeg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
 								<div class="desc">
 									<span><small>June 16, 2020</small> | <small> Cloud Native </small> | <small> <i class="icon-bubble3"></i> 4</small></span>
 									<h3><a href="https://www.linkedin.com/pulse/stateless-microservices-accelerate-change-suraj-tripathi/">Stateless Microservices Accelerate Change</a></h3>
