--- a/index.html
+++ b/index.html
@@ -287,17 +287,17 @@
                                     <div class="col-12 text-center mb-2">
                                         <ul class="list-inline mb-4" id="portfolio-flters">
                                             <li class="btn btn-secondary active"  data-filter="*"><i class="fa fa-star me-2"></i>All</li>
-                                            <li class="btn btn-secondary" data-filter=".first"><i class="fa fa-laptop-code me-2"></i>Design</li>
-                                            <li class="btn btn-secondary" data-filter=".second"><i class="fa fa-mobile-alt me-2"></i>Development</li>
+                                            <li class="btn btn-secondary" data-filter=".first"><i class="fa fa-laptop-code me-2"></i>Development</li>
+                                            <li class="btn btn-secondary" data-filter=".second"><i class="fa fa-mobile-alt me-2"></i>Machine Learning</li>
                                         </ul>
                                     </div>
                                 </div>
                                 <div class="row portfolio-container">
                                     <div class="col-md-6 mb-4 portfolio-item first">
                                         <div class="position-relative overflow-hidden mb-2">
-                                            <img class="img-fluid w-100" src="img/portfolio-1.jpg" alt="">
+                                            <img class="img-fluid w-100" src="img/filestorageapp.jpeg" alt="">
                                             <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                                                <a href="img/portfolio-1.jpg" data-lightbox="portfolio">
+                                                <a href="img/filestorageapp.jpeg" data-lightbox="portfolio">
                                                     <i class="bi bi-plus text-light"></i>
                                                 </a>
                                             </div>
@@ -305,9 +305,9 @@
                                     </div>
                                     <div class="col-md-6 mb-4 portfolio-item second">
                                         <div class="position-relative overflow-hidden mb-2">
-                                            <img class="img-fluid w-100" src="img/portfolio-2.jpg" alt="">
+                                            <img class="img-fluid w-100" src="img/leaveapplication.jpeg" alt="">
                                             <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                                                <a href="img/portfolio-2.jpg" data-lightbox="portfolio">
+                                                <a href="img/leaveapplication.jpeg" data-lightbox="portfolio">
                                                     <i class="bi bi-plus text-light"></i>
                                                 </a>
                                             </div>
@@ -315,9 +315,9 @@
                                     </div>
                                     <div class="col-md-6 mb-4 portfolio-item first">
                                         <div class="position-relative overflow-hidden mb-2">
-                                            <img class="img-fluid w-100" src="img/portfolio-3.jpg" alt="">
+                                            <img class="img-fluid w-100" src="img/qnaarchitecutre.jpg" alt="">
                                             <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                                                <a href="img/portfolio-3.jpg" data-lightbox="portfolio">
+                                                <a href="img/qnaarchitecutre.jpg" data-lightbox="portfolio">
                                                     <i class="bi bi-plus text-light"></i>
                                                 </a>
                                             </div>
@@ -325,9 +325,9 @@
                                     </div>
                                     <div class="col-md-6 mb-4 portfolio-item second">
                                         <div class="position-relative overflow-hidden mb-2">
-                                            <img class="img-fluid w-100" src="img/portfolio-4.jpg" alt="">
+                                            <img class="img-fluid w-100" src="img/newssummary.jpeg" alt="">
                                             <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                                                <a href="img/portfolio-4.jpg" data-lightbox="portfolio">
+                                                <a href="img/newssummary.jpeg" data-lightbox="portfolio">
                                                     <i class="bi bi-plus text-light"></i>
                                                 </a>
                                             </div>
