--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
                                 <span class="fw-medium text-primary">Degree:</span> B.Tech Computer Science and Engineering
                             </div>
                             <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Experience:</span> 3.5 Years
+                                <span class="fw-medium text-primary">Experience:</span> 6 Years
                             </div>
                             <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Phone:</span> +91 9559141679
+                                <span class="fw-medium text-primary">Phone:</span> +91 9559141679, +1 206 856 0967
                             </div>
                             <div class="col-sm-6 py-1">
                                 <span class="fw-medium text-primary">Email:</span> acc.surajtripathi@gmail.com
@@ -96,7 +96,7 @@
                         <div class="row g-4">
                             <div class="col-md-4 col-lg-6 col-xl-4">
                                 <div class="d-flex bg-secondary p-4">
-                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">3.5</h1>
+                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">6</h1>
                                     <div class="ps-3">
                                         <p class="mb-0">Years of</p>
                                         <h5 class="mb-0">Experience</h5>
@@ -195,6 +195,12 @@
                     <section class="py-5 wow fadeInUp" data-wow-delay="0.1s">
                         <h1 class="title pb-3 mb-5">Expericence</h1>
                         <div class="border-start border-2 border-light pt-2 ps-5">
+				<div class="position-relative mb-4">
+                                <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
+                                <h5 class="mb-1">SDE II  </h5>
+                                <p class="mb-2">AWS Border Network Engineering | <small>2024 - Present</small></p>
+                                <p>Working on DHCP servers that provide IP addresses to Amazon's internal systems and new launch of Data center regions. Collaborating with cross-functional teams like Network Operations, Security, and Site Reliability Engineering to design, implement, and maintain robust monitoring, alerting, and failover mechanisms for the DHCP servers.</p>
+                            </div>
                             <div class="position-relative mb-4">
                                 <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
                                 <h5 class="mb-1">Cloud Consultant - AppDev </h5>
